fix: "jumping title" feature of Material design is removed as it wasn't reliable (with passwords, for example)

--- a/src/Ui/Inputs/resources/css/styles.scss
+++ b/src/Ui/Inputs/resources/css/styles.scss
@@ -46,14 +46,6 @@
     }
   }
 
-  &.-large-title {
-    .input__title {
-      font-size: rem(16px);
-      position: relative;
-      top: rem(12px);
-    }
-  }
-
   &.-filled {
     .input__body {
       background: $color--input--filled;
